add my info to config file

--- a/_publications/2020-12-01-Matching.md
+++ b/_publications/2020-12-01-Matching.md
@@ -8,7 +8,7 @@ venue: 'Working paper'
 paperurl: 'https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3543906'
 citation: 'Belavina, E., Girotra, K., Moon, K., and J. Zhang. (2020). &quot;Matching in Labor Marketplaces: The Role of Experiential Information.&quot; <i>Working paper</i>.'
 ---
-Online labor marketplaces assign workers to short-term jobs. For some jobs, the choice of the best worker is based on ex-ante observable information (e.g., driver assignment based on location in ride-hailing). In others, the assignment is driven by *experiential information*, that is information obtained privately only through the worker performing the job (e.g., the fit of a childcare provider with a family). This study develops an empirical framework to impute the relative importance of each kind of information from participants' past hiring choices. Our moment inequality approach accommodates high worker turnover, varying choice sets, and limited observations of a very large number of market participants -- all key characteristics of online labor markets. We apply our framework to two markets, exploiting a natural experiment that changed marketplace commissions. Based on over 1.2M hiring decisions, we estimate that experiential information is a key driver of hiring choices, while ex-ante observable fit is relevant only for the simplest jobs. Using our estimates, we propose and evaluate alternate assignment policies.  The best-performing policies prioritize repeat work and, surprisingly, ignore ex-ante observable information to instead experiment with new workers and generate experiential information. Such policies can increase buyer welfare by as much as 45.3\% (47.1\%) of gross revenue in the Data Entry (Web Development) market compared to the current practice of skills-based matching. Policies exploiting buyers' past revealed preferences (in repeat work) without incorporating exploration still under-perform by 18.9\% in Data Entry and 8.7\% in Web Development.
+Online labor marketplaces assign workers to short-term jobs. For some jobs, the choice of the best worker is based on ex-ante observable information (e.g., driver assignment based on location in ride-hailing). In others, the assignment is driven by *experiential information*, that is information obtained privately only through the worker performing the job (e.g., the fit of a childcare provider with a family). This study develops an empirical framework to impute the relative importance of each kind of information from participants' past hiring choices. Our moment inequality approach accommodates high worker turnover, varying choice sets, and limited observations of a very large number of market participants -- all key characteristics of online labor markets. We apply our framework to two markets, exploiting a natural experiment that changed marketplace commissions. Based on over 1.2M hiring decisions, we estimate that experiential information is a key driver of hiring choices, while ex-ante observable fit is relevant only for the simplest jobs. Using our estimates, we propose and evaluate alternate assignment policies.  The best-performing policies prioritize repeat work and, surprisingly, ignore ex-ante observable information to instead experiment with new workers and generate experiential information. Such policies can increase buyer welfare by as much as 45.3% (47.1%) of gross revenue in the Data Entry (Web Development) market compared to the current practice of skills-based matching. Policies exploiting buyers' past revealed preferences (in repeat work) without incorporating exploration still under-perform by 18.9% in Data Entry and 8.7% in Web Development.
 
 [Download paper here](https://papers.ssrn.com/sol3/papers.cfm?abstract_id=3543906)
 
